new data version. Sort out the message in RouteInterchangeRepository by extract the graph query logic into own class